Fixed flex box issue in the container element. Threads will now wrap around page.

--- a/css/boardstyles.css
+++ b/css/boardstyles.css
@@ -18,6 +18,8 @@ a:hover{
 
 .container{
     display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
     justify-content: center;
 }
 
